<resources>
    <string name="app_name">APoDDemo</string>
    <string name="descinit">What wonders of the cosmos await you?</string>
    <string name="cr">NASA legalize to appear here</string>
    <string name="responseError">Error retrieving NASA info, they might be updating as we speak</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="get">Get Pic</string>
    <string name="picaday">Picture a Day!</string>

    <string-array name="saveload">
        <item>Save Image To Favorites</item>
        <item>Load A Favorite Image</item>
    </string-array>
</resources>
